--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.53.2",
+    "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^6.26.1",
     "react-toastify": "^11.0.2",
     "sort-by": "^1.2.0",
